fix spacing of the form

--- a/pathify/src/pages/Home.css
+++ b/pathify/src/pages/Home.css
@@ -94,7 +94,7 @@
 
 
 .home-form-buttons{
-    margin-top: 10px;
+    margin-top: 15px;
     background-color: rgba(197, 214, 232, 0.753); 
     margin-right: 10px;
     color:black;
